========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2016-08-21

  - Fixed a SQL shell bug with extracting UNITS() from a Position column.


2016-08-17

  - Added beancount.core.amount.abs() function for absolute values of Amount.

  - Added rendering of links to beancount.plugins.split_expenses plugin, and
    made it quiet by default. Added --output-stdout option to make it do that
    again.

  - Created a new experimental script that attempts to match postings between
    two ledgers. A pair of (filename, account-regexp) is provided for each, and
    then the amounts and links are compared and paired up, and remaining
    unmatched postings are printed out. This is very useful to reconcile trip
    expenses between a personal ledger and the ledger for a trip or external
    project where some of the expenses are paid from the personal ledger as
    contributions to the trip or project.

  - Made the upload-csv-to-google-sheet script use the basename (without
    extension) of the given filenames as sheet names instead of "Sheet X"
    numbers. (Note: This entire thing be rewritten using the new Google Sheets
    API which won't require gdata and which will be more stable.)

  - Added a quick implementation of b.q.query_render.render_csv()
    and refactored b.q.query_render.render_text() to use common code. Both
    functions now have a new 'expand' option which will create multiple rows for
    cells which return a list of strings. The new default behavior is to
    concatenate the strings with commas.

    The shell (bean-query) has a new 'expand' shell variable to match. Also, the
    -f/--format option of it is now supported, and in interactive mode it sets
    the default value for 'expand'.

  - Since output to CSV is now implemented, I enabled the --output-csv option of
    b.p.split_expenses as well.


2016-08-14
